.provarCaches/00D5f000005vwGkEAI/objects/rstk__fsoackcomp__c.object
<CustomObject>
    <description>fsoackcomp__c</description>
    <fields>
        <fullName>rstk__ackdetail__c</fullName>
        <inlineHelpText>Indicator for whether or not the Acknowledgement is to print detail</inlineHelpText>
        <label>SO Acknowledgement Detail</label>
        <referenceTo>rstk__fsoackd__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Components</relationshipLabel>
        <relationshipName>components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__compname__c</fullName>
        <inlineHelpText>Component name (if detail is printed)</inlineHelpText>
        <label>Component Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackcomp_longdesc__c</fullName>
        <inlineHelpText>Long Description</inlineHelpText>
        <label>Extended Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Order Line</inlineHelpText>
        <label>Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__qtyreq__c</fullName>
        <inlineHelpText>Quantity Orders (if detail is printed)</inlineHelpText>
        <label>Qty Required</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sequence__c</fullName>
        <inlineHelpText>Print Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__uom__c</fullName>
        <inlineHelpText>Acknowledgement Unit Of Measure</inlineHelpText>
        <label>Unit of Measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SO Acknowledgement Component</label>
    <nameField>
        <label>SO Acknowledgement Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Acknowledgement Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>